# miguelt

./: .env.example  .gitignore  CLAUDE.md  DEMO_JOURNEYS_2026-04-20.md  INFORME_CENTRO_EMPRENDIMIENTO_2026-04-20.md  INFORME_TECNICO_TRACE.md  JOURNEY_CACAO_EUDR_FULL_2026-04-22.md  PITCH_CENTRO_EMPRENDIMIENTO_2026-04-20.md  PITCH_TRACE_LOGISTICA.md  PLATFORM_REPORT.md  README.md  cloudbuild.tests.yaml  docker-compose.yml  qa_test.sh
ai-service/: .env.example  Dockerfile  README.md  alembic.ini  (+1 more)
media-service/: Dockerfile  README.md  alembic.ini  pyproject.toml
media-service/alembic/: env.py
media-service/alembic/versions/: 001_media_tables.py
media-service/app/: main.py
media-service/app/api/: deps.py
media-service/app/api/routers/: health.py  internal.py  media.py
media-service/app/core/: settings.py
media-service/app/db/: models.py  session.py
media-service/app/repositories/: media_repo.py
media-service/app/services/: media_service.py
media-service/app/storage/: backend.py
trace-service/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-test.txt  test_output.txt
trace-service/alembic/: env.py
trace-service/alembic/versions/: 001_initial_schema.py  002_organizations.py  003_multi_tenant.py  004_wallet_private_key.py  005_performance_indexes.py  006_expanded_events.py  007_event_type_configs.py  008_anchor_requests.py  009_shipments_trade_docs.py  010_workflow_engine.py  011_shipment_freight_costs.py  012_custody_event_evidence.py  013_return_event_type.py  014_workflow_multi_event_transitions.py  015_event_documents.py  016_custody_events_tenant_and_indexes.py  017_customs_icon_fix.py  018_asset_blockchain_error.py  019_tenant_fks.py  020_blockchain_status_check.py  021_event_parent.py  022_event_custody_mode.py  023_asset_plot_link_event_quantity.py  024_fk_tenant_on_docs.py
trace-service/app/: main.py
trace-service/app/api/: deps.py
trace-service/app/api/routers/: analytics.py  anchoring.py  custody.py  event_config.py  health.py  internal.py  media.py  registry.py  shipments.py  solana.py  taxonomy.py  tenants.py  workflow.py
trace-service/app/clients/: blockchain_provider.py  helius_provider.py  provider_factory.py  simulation_provider.py  solana_client.py
trace-service/app/core/: crypto.py  errors.py  logging.py  middleware.py  settings.py
trace-service/app/db/: migrations_helpers.py  models.py  session.py
trace-service/app/domain/: schemas.py  types.py
trace-service/app/repositories/: anchor_repo.py  custody_repo.py  event_type_repo.py  media_repo.py  registry_repo.py  taxonomy_repo.py  tenant_repo.py  workflow_repo.py
trace-service/app/services/: anchor_service.py  blockchain_service.py  custody_service.py  document_service.py  registry_service.py  subscription_client.py  taxonomy_service.py  tenant_service.py  transport_analytics_service.py  workflow_service.py
trace-service/app/storage/: backend.py
trace-service/app/utils/: hashing.py  idempotency.py  json_canonical.py
trace-service/tests/: conftest.py  test_allowlist.py  test_concurrency.py  test_custody_flow.py  test_idempotency.py
trace-service/tests/unit/: conftest.py  test_custody_state_machine.py
trace-service/worker/: worker_main.py
user-service/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements-test.txt  requirements.txt
user-service/alembic/: env.py
user-service/alembic/versions/: 001_initial.py  002_subscription_permissions.py  003_inventory_permissions.py  004_invitations_emails.py  005_email_config.py  006_user_profile_fields.py  007_email_providers.py  008_granular_inventory_permissions.py  009_predefined_role_groups.py  010_commerce_integration_permissions.py  011_production_module_permissions.py  012_subscription_email_templates.py  013_onboarding_fields.py  014_po_granular_permissions.py  015_compliance_permissions.py  016_users_unique_per_tenant.py  017_audit_log_immutable.py  018_sync_production_compliance_admin.py  019_2fa_and_sessions.py  020_drop_email_test_mode.py
user-service/app/: main.py
user-service/app/api/: deps.py
user-service/app/api/routers/: audit.py  auth.py  email_config.py  email_providers.py  email_templates.py  health.py  internal.py  notifications.py  onboarding.py  permissions.py  roles.py  users.py
user-service/app/clients/: media_client.py
user-service/app/core/: crypto.py  errors.py  middleware.py  password_policy.py  role_templates.py  security.py  settings.py
user-service/app/db/: base.py  models.py
user-service/app/domain/: schemas.py
user-service/app/repositories/: audit_repo.py  email_config_repo.py  email_provider_repo.py  email_template_repo.py  role_repo.py  template_repo.py  user_repo.py
user-service/app/services/: audit_retention_service.py  auth_service.py  email_provider_service.py  email_service.py  email_template_service.py  role_service.py  totp_service.py  user_service.py
user-service/tests/unit/: test_password_policy.py  test_totp.py
(+974 files in other folders)
