[tool.poetry]
name = "media-service"
version = "0.1.0"
description = "Centralized media file management for the Trace platform"
authors = ["Trace Team <dev@trace.example>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
orjson = "^3.10.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
redis = {extras = ["hiredis"], version = "^5.0.4"}
httpx = {extras = ["http2"], version = "^0.27.0"}
structlog = "^24.1.0"
boto3 = "^1.34.0"
python-multipart = "^0.0.9"
PyJWT = {extras = ["crypto"], version = "^2.8.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
