[tool.poetry]
name = "trace-service"
version = "0.1.0"
description = "Chain-of-custody tracking with Solana anchoring"
authors = ["Trace Team <dev@trace.example>"]
readme = "README.md"
packages = [{include = "app"}, {include = "worker"}]

[tool.poetry.dependencies]
python = "^3.11"

# ─── Web Framework ────────────────────────────────────────────────────────────
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
uvloop = "^0.19.0"
httptools = "^0.6.1"

# ─── Validation ───────────────────────────────────────────────────────────────
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
orjson = "^3.10.0"

# ─── Database ────────────────────────────────────────────────────────────────
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"

# ─── Redis / Cache ───────────────────────────────────────────────────────────
redis = {extras = ["hiredis"], version = "^5.0.4"}
arq = "^0.25.0"

# ─── HTTP Client ─────────────────────────────────────────────────────────────
httpx = {extras = ["http2"], version = "^0.27.0"}

# ─── Auth ────────────────────────────────────────────────────────────────────
PyJWT = {extras = ["crypto"], version = "^2.8.0"}

# ─── Solana ──────────────────────────────────────────────────────────────────
solders = "^0.21.0"
solana = "^0.35.0"

# ─── Observability ───────────────────────────────────────────────────────────
structlog = "^24.1.0"
prometheus-fastapi-instrumentator = "^7.0.0"

# ─── Resilience ──────────────────────────────────────────────────────────────
tenacity = "^8.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
httpx = {extras = ["http2"], version = "^0.27.0"}
anyio = {extras = ["trio"], version = "^4.4.0"}
asgi-lifespan = "^2.1.0"
factory-boy = "^3.3.0"
faker = "^25.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
