[tool.poetry]
name = "user-service"
version = "0.1.0"
description = "Auth, RBAC, and audit microservice for Trace"
authors = ["Trace Team <dev@trace.example>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

# ─── Web Framework ────────────────────────────────────────────────────────────
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
uvloop = "^0.19.0"
httptools = "^0.6.1"

# ─── Validation ───────────────────────────────────────────────────────────────
pydantic = {extras = ["email"], version = "^2.7.0"}
pydantic-settings = "^2.3.0"
orjson = "^3.10.0"
email-validator = "^2.1.0"

# ─── Database ────────────────────────────────────────────────────────────────
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"

# ─── Redis / Cache ───────────────────────────────────────────────────────────
redis = {extras = ["hiredis"], version = "^5.0.4"}

# ─── Auth ─────────────────────────────────────────────────────────────────────
PyJWT = {extras = ["crypto"], version = "^2.8.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# ─── Observability ───────────────────────────────────────────────────────────
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
